<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_3d_rotation_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/baseline_star_border_black_24"
            android:title="@string/menu_news_main" />
        <item
            android:id="@+id/nav_hard"
            android:icon="@drawable/baseline_mouse_black_24"
            android:title="@string/menu_news_hard" />
        <item
            android:id="@+id/nav_soft"
            android:icon="@drawable/baseline_code_black_24"
            android:title="@string/menu_news_soft" />
    </group>

    <item android:title="Разделы">
        <menu>
            <item
                android:id="@+id/nav_IT"
                android:icon="@drawable/baseline_all_inclusive_24"
                android:title="@string/menu_IT_finance" />
            <item
                android:id="@+id/nav_offsyanka"
                android:icon="@drawable/baseline_free_breakfast_black_24"
                android:title="@string/menu_offsyanka" />
        </menu>
    </item>

</menu>
